java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/Incorrect implicit class name with spaces.java
<error descr="The file name of an implicitly declared class is not a valid identifier">void main() {}</error>